--- a/catalog/templates/product_detail.html
+++ b/catalog/templates/product_detail.html
@@ -6,11 +6,11 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <img src="{{ product.photo | media_filter }}" class="img-thumbnail">
+            <img src="{{ product.photo | media_filter }}" class="img-fluid">
             <div class="card-body">
                 <p class="card-text">{{ product.name }}</p>
                 <p class="card-text">Цена: {{ product.price }}</p>
-                <p class="card-text">{{ product.description | truncatechars:100 }}</p>
+                <p class="card-text">{{ product.description }}</p>
 
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
