--- a/catalog/templates/product_detail.html
+++ b/catalog/templates/product_detail.html
@@ -6,7 +6,7 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <img src="{{ product.photo | media_filter }}" class="img-fluid">
+            <img src="{{ product.photo | media_filter }}" class="img-thumbnail">
             <div class="card-body">
                 <p class="card-text">{{ product.name }}</p>
                 <p class="card-text">Цена: {{ product.price }}</p>
