--- a/catalog/templates/base.html
+++ b/catalog/templates/base.html
@@ -173,6 +173,8 @@
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Главная</h1>
         <p class="lead text-body-secondary">Здесь можно ознакомиться со всем списком товаров.</p>
+        <a class="btn btn-outline-success btn-lg" href="{% url 'catalog:product_create' %}" role="button">Создать продукт</a>
+
       </div>
     </div>
   </section>
