--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -14,7 +14,7 @@
 
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <a class="btn btn-warning" href="{% url 'catalog:products_list' %}" role="button">Назад</a>
+                    <a class="btn btn-outline-dark" href="{% url 'catalog:products_list' %}" role="button">Назад</a>
                 </div>
               </div>
             </div>
