--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -12,7 +12,9 @@
               <p class="card-text"> {{ product.name }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                    <a class="btn btn-warning" href="{% url 'catalog:product_detail' product.pk %}" role="button">Подробно</a>
+                    <a class="btn btn-outline-dark" href="{% url 'catalog:product_detail' product.pk %}" role="button">Подробно</a>
+                    <a class="btn btn-outline-warning" href="{% url 'catalog:product_update' product.pk %}" role="button">Редактировать</a>
+                    <a class="btn btn-outline-danger" href="{% url 'catalog:product_delete' product.pk %}" role="button">Удалить</a>
                 </div>
               </div>
             </div>
