--- a/blog/templates/blog/article_confirm_delete.html
+++ b/blog/templates/blog/article_confirm_delete.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Форма NewModel</title>
+    <title>Форма Blog</title>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
 </head>
@@ -14,15 +14,15 @@
         <div class="row">
             <div class="card">
                 <div class="card-body">
-                    <h2 class="card-text">Удалить объект NewModel</h2>
-                    <p>Вы уверены, что хотите удалить объект "{{ newmodel.name }}" ?</p>
+                    <h2 class="card-text">Удалить Blog</h2>
+                    <p>Вы уверены, что хотите удалить Blog "{{ article.name }}" ?</p>
                     <form method="post">
                         {% csrf_token %}
                         {{ form.as_p }}
                         <div>
 
                             <button type="submit" class="btn btn-danger">Удалить</button>
-                            <a class="btn btn-warning" href="{% url 'catalog:newmodel_list'%}" role="button">Отмена</a>
+                            <a class="btn btn-warning" href="{% url 'blog:article_list'%}" role="button">Отмена</a>
 
                         </div>
                     </form>
