--- a/blog/templates/blog/article_detail.html
+++ b/blog/templates/blog/article_detail.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Форма NewModel</title>
+    <title>Форма Blog</title>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
 </head>
@@ -14,12 +14,13 @@
         <div class="row">
             <div class="card">
                 <div class="card-body">
-                    <h2 class="card-text">{{ newmodel.name }}</h2>
-                    <p>{{ newmodel.description }}</p>
-                    <p>Создано: {{ newmodel.created_at }}</p>
-                    <p>Обновлено: {{ newmodel.updated_at }}</p>
-                    <p>Количество просмотров: {{ newmodel.views_counter }}</p>
-                    <a class="btn btn-outline-primary" href="{% url 'catalog:newmodel_list'%}" role="button">Назад</a>
+                    <h2 class="card-text">{{ article.name }}</h2>
+                    <p>{{ article.description }}</p>
+                    <p>{{ article.photo }}</p>
+                    <p>Создано: {{ article.created_at }}</p>
+                    <p>Обновлено: {{ article.updated_at }}</p>
+                    <p>Количество просмотров: {{ article.views_counter }}</p>
+                    <a class="btn btn-outline-primary" href="{% url 'blog:article_list'%}" role="button">Назад</a>
                 </div>
             </div>
         </div>
