--- a/blog/templates/blog/article_form.html
+++ b/blog/templates/blog/article_form.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Форма NewModel</title>
+    <title>Форма Blog</title>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
 </head>
@@ -14,14 +14,14 @@
         <div class="row">
             <div class="card">
                 <div class="card-body">
-                    <h1 class="mb-4">Форма NewModel</h1>
+                    <h1 class="mb-4">Blog</h1>
                     <form method="post">
                         {% csrf_token %}
                         {{ form.as_p }}
                         <div>
 
                             <button type="submit" class="btn btn-outline-primary">Сохранить</button>
-                            <a class="btn btn-outline-dark" href="{% url 'catalog:newmodel_list'%}" role="button">Отмена</a>
+                            <a class="btn btn-outline-dark" href="{% url 'blog:article_list'%}" role="button">Отмена</a>
 
                         </div>
                     </form>
